--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <!--                TODO List-->
                 <a class="" href="https://www.spriters-resource.com/nintendo_switch/supersmashbrosultimate/">Renders Smash Ultimate</a>
                 <br>
+                <a class="" href="https://projectplusgame.com/download/">Renders Project +</a>
+                <br>
                 <a class="" href="https://drive.google.com/drive/folders/1SMjNgynt7c-VdKJJ9_wTcKSasS2NcVSF">Renders RoA</a>
                 <!--                TODO FONTS-->
             </div>
