add custom color background

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
             <section class="section-banner" id="section-j2">
                 <div class="banner rotate-tag-left" id="banner-j2"><span class="nes-text" id="name-j2">J2</span></div>
             </section>
-            <div class="character background-j1-1 solo" id="div-j1-char1">
+            <div class="character solo" id="div-j1-char1">
                 <img id="char1-j1" class="" src="">
             </div>
-            <div class="character background-j2-2 solo" id="div-j2-char1">
+            <div class="character solo" id="div-j2-char1">
                 <img id="char1-j2" class="" src="">
             </div>
             <div class="banner rotate-phase-left" id="phase"><span class="nes-text" id="phase-text">Winners</span></div>
