add Gotham Font + ressources and creator

--- a/index.html
+++ b/index.html
@@ -34,12 +34,31 @@
             <div>
                 <p>Resources : </p>
                 <!--                TODO List-->
-                <a class="" href="https://www.spriters-resource.com/nintendo_switch/supersmashbrosultimate/">Renders Smash Ultimate</a>
-                <br>
-                <a class="" href="https://projectplusgame.com/download/">Renders Project +</a>
-                <br>
-                <a class="" href="https://drive.google.com/drive/folders/1SMjNgynt7c-VdKJJ9_wTcKSasS2NcVSF">Renders RoA</a>
-                <!--                TODO FONTS-->
+                <div class="lists">
+                    <ul class="nes-list is-disc">
+                        <li><a target="_blank" rel="noopener" href="https://www.spriters-resource.com/nintendo_switch/supersmashbrosultimate/">Renders Smash Ultimate</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://projectplusgame.com/download/">Renders Project +</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://drive.google.com/drive/folders/1SMjNgynt7c-VdKJJ9_wTcKSasS2NcVSF">Renders RoA</a></li>
+                        <li>Custom stock icons by me</li>
+                    </ul>
+                </div>
+                <!--                TODO FONTS, automatique ?-->
+                <p>Polices d'écritures :</p>
+                <div class="lists">
+                    <ul class="nes-list is-disc">
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafont.com/blacklisted.font">BlackListed</a>, by <a target="_blank" rel="noopener" href="https://jaydegarrow.wixsite.com/jaydefonts">Jayde Garrow</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="http://bit.ly/WatchDogsFont">Hacked</a>, by <a href="https://davidlibeau.fr/" rel="noopener">David Libeau</a>
+                        </li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafont.com/heroes-legend.font">Heroes Legend | Hollow</a>, by <a href="http://www.imagex-fonts.com/" rel="noopener">Imagex</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafont.com/ssf4-abuket.font">SSF4 Bucket</a>, by <a href="https://www.dafont.com/javier-guevara-valle.d2708" rel="noopener">ArcJavier</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafont.com/android-assassin.font">Android Assassin</a>, by <a href="https://www.dafont.com/darrell-flood.d4895" rel="noopener">Darrell Flood</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafontfree.net/freefonts-futura-f30.htm">Futura Bold</a>, by <a href="#" rel="noopener">?</a></li>
+                        <li><a target="_blank" rel="noopener" class="" href="https://www.dafontfree.net/freefonts-impact-f129612.htm">Impact</a>, by <a href="#" rel="noopener">?</a></li>
+                        <li>NEW <a target="_blank" rel="noopener" class="" href="https://fontsgeek.com/fonts/Gotham-Black-Regular">Gotham Black</a>, by <a href="#" rel="noopener">?</a></li>
+                        <li>Autres polices : <a href="https://fonts.google.com/" rel="noopener">Google Fonts</a></li>
+                    </ul>
+                </div>
+                <span style="font-size: x-small">Si je me suis trompé sur les sources, contactez moi !</span>
             </div>
             <button class="nes-btn" onclick="document.getElementById('dialog-credits').style.display = 'none'">Ok</button>
         </div>
