--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
             <div class="nes-select" style="width: 50%; margin: auto; padding-bottom: 10px">
                 <select required id="game_select" name="game">
                     <option value="pplus">Project +</option>
+                    <option value="n64">Super Smash Bros. 64</option>
                     <option value="melee">Super Smash Bros. Melee</option>
                     <option value="brawl">Super Smash Bros. Brawl</option>
                     <option value="wiiu">Super Smash Bros. for Wii U</option>
@@ -250,7 +251,6 @@
                     <option value="roa">Rivals of Aether</option>
                     <option value="" disabled> ----- </option>
                     <!-- <option value="PM" disabled>Project M</option> -->
-                    <option value="n64" disabled>Super Smash Bros. 64</option>
                 </select>
             </div>
             <button class="credits nes-btn is-warning" target="_blank" rel="noopener" aria-label="twitter" onclick="document.getElementById('dialog-credits').style.display = 'block'">?</button>
