add btn new version

--- a/index.html
+++ b/index.html
@@ -236,9 +236,12 @@
     <!-- TODO FR / EN -->
     <div class="center margin-auto"><span id="menu-top" class="center margin-auto nes-text">VoDs Thumbnails Generator for </span>
         <div style="display: flex">
-            <button class="nes-btn is-error" target="_blank" rel="noopener" aria-label="twitter" style="margin-left: 1em;" onclick="resetChar()">
+            <button class="nes-btn is-warning" target="_blank" rel="noopener" aria-label="twitter" style="margin-left: 1em;" onclick="resetChar()">
                 <i class="material-icons">cached</i>
             </button>
+            <a style="margin-left: 1em;" class="nes-btn is-error changecolor" href="https://kekwel.github.io/SmashThumbnailGenerator/" target="_blank" rel="noopener" aria-label="twitter">
+                Nouvelle version !
+            </a>
             <div class="nes-select" style="width: 50%; margin: auto; padding-bottom: 10px">
                 <select required id="game_select" name="game">
                     <option value="pplus">Project +</option>
